kubernetes/telecom-api-platform/network/mysql-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: mysql-allow-telecom-api
  namespace: telecom

spec:
  podSelector:
    matchLabels:
      app: mysql

  policyTypes:
  - Ingress

  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: telecom-api

    ports:
    - protocol: TCP
      port: 3306
